Automatically bring images to the target directory

--- a/config.json
+++ b/config.json
@@ -4,5 +4,8 @@
     "default_l10n": "de",
     "additional_l10ns": [
         "en"
+    ],
+    "resources": [
+        "{conf_dir}/images"
     ]
 }
