--- a/config.json
+++ b/config.json
@@ -13,12 +13,13 @@
         "html-template-file": "{conf_dir}/templates/html-template.html"
     },
     "macros": {
-        "scene-header-image": "[![Screenshot {=property(scene-translated)}](images/scenes/{=property(scene)}/scene-bait-small.jpg){: class=left-image }](images/scenes/{=property(scene)}/scene-bait.png)",
+        "scene-header-image": "{=macro(zoomable-image-left, Screenshot {=property(scene-translated)},images/scenes/{=property(scene)}/scene-bait.png)}",
         "scene-header-text-de": "In der {=property(scene-translated)}-Szene könnt ihr $* ausmalen.",
         "scene-header-localized": "{=macro(scene-header-image)}\n{=macro(scene-header-text-{=property(language)},$*)}\n\n",
         "scene-links": "[![YouTube icon](images/youtube.png){: class=text-icon} $1](https://www.youtube.com/watch?v={=property(youtube-demo-video-id)}&list=PL-o9mFmKUyeaNl0TSucCBEsVJLK6gcZdZ)\\n\\n[![Scanarium icon](images/scanarium.png){: class=text-icon} $2](https://demo.scanarium.com/?scene={=property(scene)})\\n\\n[![Coloring page icon](images/coloring-page.png){: class=text-icon} $3](https://scanarium.com/#pdfs-{=property(scene)})",
         "scene-links-de": "{=macro(scene-links, Demo Video bei YouTube, Live Demo, Ausmalbilder für diese Szene)}",
-        "scene-links-localized": "{=macro(scene-links-{=property(language)})}"
+        "scene-links-localized": "{=macro(scene-links-{=property(language)})}",
+        "zoomable-image-left": "[![$1]({=substring($2,,-4)}-small.jpg){: class=left-image }]($2)"
     },
     "external_functions": {
         "translate": {
