Add table of contents

--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
     ],
     "resources": [
         "{conf_dir}/images",
-        "{conf_dir}/templates/styles"
+        "{conf_dir}/templates/styles",
+        "{conf_dir}/templates/scripts"
     ],
     "exporter": {
         "html-template-file": "{conf_dir}/templates/html-template.html"
