--- a/config.json
+++ b/config.json
@@ -29,6 +29,10 @@
         "translate": {
             "file": "{conf_dir}/functions/translate.py",
             "name": "translate"
+        },
+        "dumpLanguageMatrix": {
+            "file": "{conf_dir}/functions/translate.py",
+            "name": "dumpLanguageMatrix"
         }
     }
 }
