--- a/config.json
+++ b/config.json
@@ -24,6 +24,8 @@
         "scene-links-de": "{=macro(scene-links, Demo Video bei YouTube, Live Demo, Ausmalbilder für diese Szene)}",
         "scene-links-localized": "{=macro(scene-links-{=property(language)})}",
         "todo": "\n\n(todo) $*\n{: class=todo}\n\n",
+        "text-icon": "![$1 icon](images/{=lower($1)}.png){: class=text-icon}",
+        "linked-text-icon": "[![$1 icon](images/{=lower($1)}.png){: class=text-icon} $2]($3)",
         "zoomable-image-left": "[![$1]({=substring($2,,-4)}-small.jpg){: class=left-image }]($2)"
     },
     "external_functions": {
