--- a/config.json
+++ b/config.json
@@ -20,12 +20,12 @@
         "scene-header-image": "{=macro(zoomable-image-left, Screenshot {=property(scene-translated)},images/scenes/{=property(scene)}/scene-bait.png)}",
         "scene-header-text-de": "In der {=property(scene-translated)}-Szene könnt ihr $* ausmalen.",
         "scene-header-localized": "{=macro(scene-header-image)}\n{=macro(scene-header-text-{=property(language)},$*)}\n\n",
-        "scene-links": "[![YouTube icon](images/youtube.png){: class=text-icon} $1](https://www.youtube.com/watch?v={=property(youtube-demo-video-id)}&list=PL-o9mFmKUyeaNl0TSucCBEsVJLK6gcZdZ)\\n\\n[![Scanarium icon](images/scanarium.png){: class=text-icon} $2](https://demo.scanarium.com/?scene={=property(scene)})\\n\\n[![Coloring page icon](images/coloring-page.png){: class=text-icon} $3](https://scanarium.com/#pdfs-{=property(scene)})",
+        "scene-links": "{=macro(linked-text-icon, YouTube, $1, https://www.youtube.com/watch?v={=property(youtube-demo-video-id)}&list=PL-o9mFmKUyeaNl0TSucCBEsVJLK6gcZdZ)}\\n\\n{=macro(linked-text-icon, Scanarium, $2, https://demo.scanarium.com/?scene={=property(scene)})}\\n\\n{=macro(linked-text-icon, Coloring-page, $3, https://scanarium.com/#pdfs-{=property(scene)})}",
         "scene-links-de": "{=macro(scene-links, Demo Video bei YouTube, Live Demo, Ausmalbilder für diese Szene)}",
         "scene-links-localized": "{=macro(scene-links-{=property(language)})}",
         "todo": "\n\n(todo) $*\n{: class=todo}\n\n",
         "text-icon": "![$1 icon](images/{=lower($1)}.png){: class=text-icon}",
-        "linked-text-icon": "[![$1 icon](images/{=lower($1)}.png){: class=text-icon} $2]($3)",
+        "linked-text-icon": "[{=macro(text-icon, $1)} $2]($3)",
         "zoomable-image-left": "[![$1]({=substring($2,,-4)}-small.jpg){: class=left-image }]($2)"
     },
     "external_functions": {
