--- a/config.json
+++ b/config.json
@@ -41,6 +41,10 @@
         "dumpLanguageMatrix": {
             "file": "{conf_dir}/functions/translate.py",
             "name": "dumpLanguageMatrix"
+        },
+        "safeFilename": {
+            "file": "{conf_dir}/functions/util.py",
+            "name": "safeFilename"
         }
     }
 }
