--- a/config.json
+++ b/config.json
@@ -16,6 +16,7 @@
     },
     "macros": {
         "help-email-link": "[{=property(help-email-address)}](mailto:{=property(help-email-address)})",
+        "url": "[$1]($1 \"$2\")",
         "node-link": "[{=nodeTitle($1)}](#$1 \"{=translate(Chapter)}: {=nodeTitle($1)}\")",
         "labeled-node-link": "[$2](#$1 \"{=translate(Chapter)}: {=nodeTitle($1)}\")",
         "scene-header-image": "{=macro(zoomable-image-left, Screenshot {=property(scene-translated)},images/scenes/{=property(scene)}/scene-bait.png)}",
