--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
         "scene-header-image": "{=macro(zoomable-image-left, Screenshot {=property(scene-translated)},images/scenes/{=property(scene)}/scene-bait.png)}",
         "scene-header-text-de": "In der {=property(scene-translated)}-Szene könnt ihr $* ausmalen.",
         "scene-header-localized": "{=macro(scene-header-image)}\n{=macro(scene-header-text-{=property(language)},$*)}\n\n",
-        "scene-links": "{=macro(linked-text-icon, YouTube, $1, https://www.youtube.com/watch?v={=property(youtube-demo-video-id)}&list=PL-o9mFmKUyeaNl0TSucCBEsVJLK6gcZdZ)}\\n\\n{=macro(linked-text-icon, Scanarium, $2, https://demo.scanarium.com/?scene={=property(scene)})}\\n\\n{=macro(linked-text-icon, Coloring-page, $3, https://scanarium.com/#pdfs-{=property(scene)})}",
+        "scene-links": "{: class=clearfix}\\n\\n{=macro(linked-text-icon, YouTube, $1, https://www.youtube.com/watch?v={=property(youtube-demo-video-id)}&list=PL-o9mFmKUyeaNl0TSucCBEsVJLK6gcZdZ)}\\n\\n{=macro(linked-text-icon, Scanarium, $2, https://demo.scanarium.com/?scene={=property(scene)})}\\n\\n{=macro(linked-text-icon, Coloring-page, $3, https://scanarium.com/#pdfs-{=property(scene)})}",
         "scene-links-de": "{=macro(scene-links, Demo Video bei YouTube, Live Demo, Ausmalbilder für diese Szene)}",
         "scene-links-localized": "{=macro(scene-links-{=property(language)})}",
         "todo": "\n\n(todo) $*\n{: class=todo}\n\n",
