Demote version mismatch to warnings + todos

--- a/config.json
+++ b/config.json
@@ -50,5 +50,6 @@
             "file": "{conf_dir}/functions/util.py",
             "name": "safeFilename"
         }
-    }
+    },
+    "version_mismatch_actions": ["append-macro-todo", "warning"]
 }
