--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
     "macros": {
         "help-email-link": "[{=property(help-email-address)}](mailto:{=property(help-email-address)})",
         "url": "[$1]($1 \"$2\")",
+        "named-url": "[$2]($1 \"$2\")",
         "node-link": "[{=nodeTitle($1)}](#$1 \"{=translate(Chapter)}: {=nodeTitle($1)}\")",
         "labeled-node-link": "[{=shift($*)}](#$1 \"{=translate(Chapter)}: {=nodeTitle($1)}\")",
         "scene-header-image": "{=macro(zoomable-image-left, scenes/{=property(scene)}/scene-bait.png, Screenshot {=property(scene-translated)})}",
